# Fpl-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PLAN.md  README.md  Tiltfile  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  railway.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0da7ffef485e_make_deadline_time_timezone_aware.py  3612def62e6e_add_transfer_snapshots_table.py  87cdff486ad2_add_transfer_and_ownership_fields_to_.py  8d2b1b59b9de_replace_player_gw_xg_with_player_season_.py  9945ad542039_add_code_field_to_players_and_teams.py  a1b2c3d4e5f6_add_perf_indexes_form_prices_transfers.py  ae6f98875242_add_core_models.py  b08a00b1c327_add_query_performance_indexes.py  f3041b523a82_phase10_player_form_prediction_log.py  fb7e8c7601cf_add_unique_constraints_for_upserts.py
backend/app/: main.py
backend/app/api/: decisions.py  gameweeks.py  lineups.py  my_team.py  players.py  predictions.py
backend/app/core/: cache.py  config.py  database.py  health.py  rate_limiter.py
backend/app/models/: __init__.py  fixture.py  gameweek.py  player.py  player_form_cache.py  player_gw_stats.py  player_gw_xg.py  player_prices.py  prediction_log.py  team.py  transfer_snapshot.py
backend/app/schemas/: accuracy.py  common.py  compare.py  decision.py  gameweek.py  lineup.py  my_team.py  player.py  transfer.py
backend/app/services/: accuracy.py  fpl_client.py  fpl_urls.py  lineup_predictor.py  points_model.py  price_change.py  transfer_engine.py  understat_client.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_decisions.py  test_api_gameweeks.py  test_api_health.py  test_api_players.py  test_api_predictions.py
backend/tests/unit/: test_cache.py  (+8 more)
backend/worker/: celery_app.py  normaliser.py  schedule.py  tasks.py
(+72 files in other folders)
