[project]
name = "fpl-analytics-backend"
version = "0.1.0"
description = "FPL Analytics Platform — backend API and data pipeline"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.14,<2",
    "celery[redis]>=5.4,<6",
    "redis>=5.2,<6",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
    "rapidfuzz>=3.11,<4",
    "scikit-learn>=1.6,<2",
    "beautifulsoup4>=4.12,<5",
    "sentry-sdk[fastapi]>=2.19,<3",
]

[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    "pre-commit>=4.0,<5",
]
test = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "hypothesis>=6.120,<7",
    "httpx",
]
lint = [
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["app", "worker"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.coverage.run]
source = ["app", "worker"]
omit = ["*/tests/*", "*/alembic/*"]
